k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eugene-deployment-result
  namespace: eugene
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: eugene-deployment-result
  template:
    metadata:
      labels:
        app: eugene-deployment-result
    spec:
      containers:
        - name: eugene-deployment-result
          image: ugindev/result:latest
          ports:
            - containerPort: 80
