k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eugene-deployment-vote
  namespace: eugene
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: eugene-deployment-vote
  template:
    metadata:
      labels:
        app: eugene-deployment-vote
    spec:
      containers:
        - name: eugene-deployment-vote
          image: ugindev/vote:latest
          ports:
            - containerPort: 80
