k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eugene-deployment-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eugene-deployment-worker
  template:
    metadata:
      labels:
        app: eugene-deployment-worker
    spec:
      containers:
        - name: eugene-deployment-worker
          image: ugindev/worker:latest
