k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-postgres
spec:
  type: ClusterIP
  selector:
    app: eugene-deployment-postgres
  ports:
    - port: 5432
      targetPort: 5432
