k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-redis
spec:
  type: ClusterIP
  selector:
    app: eugene-deployment-redis
  ports:
    - port: 6379
      targetPort: 6379
