k8s/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-result
spec:
  selector:
    app: eugene-deployment-result
  ports:
    - port: 80
      targetPort: 80
