k8s/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eugene-service-vote
spec:
  selector:
    app: eugene-deployment-vote
  ports:
    - port: 80
      targetPort: 80
